# budgey

./: Cargo.toml  test.xlsx  test_bak_09-22-2024-23-58-49.xlsx
src/: app.rs  main.rs
src/items/: record.rs  schedule.rs
