[package]
name = "budgey"
version = "0.1.0"
edition = "2015"

[dependencies]
csv = "1.3.0"
serde = { version = "1.0.201", features = ["derive"] }
tui = "0.19.0"
indexmap = "2.2.6"
crossterm = "0.27.0"
ratatui = "0.26.3"
chrono = { version = "0.4", features = ["alloc"] }
calamine = "0.25.0"
rust_xlsxwriter = "0.77.0"
